<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateLessonActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/q1_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5"
                android:stepSize="20" />

            <TextView
                android:id="@+id/q2_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="20" />

            <TextView
                android:id="@+id/q3_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="20" />

            <TextView
                android:id="@+id/q4_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="20" />

            <TextView
                android:id="@+id/q5_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="20" />

            <TextView
                android:id="@+id/q6_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/q6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="20" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_submit" />

            <Button
                android:id="@+id/btn_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_email" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>